--- a/.env.example
+++ b/.env.example
@@ -1,130 +1,10 @@
-# ===========================================
-# AZURE AD / ENTRA ID CONFIGURATION
-# ===========================================
-# Get these values from your Azure AD app registration
-# https://portal.azure.com -> Azure Active Directory -> App registrations
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=postgres://postgres:root@localhost:5432/minigame
+GOOSE_MIGRATION_DIR=./migrations
+GOOSE_TABLE=public.goose_migrations
 
-# Application (client) ID
-AZURE_CLIENT_ID=
-
-# Client secret value (not the secret ID)
-AZURE_CLIENT_SECRET=
-
-# Directory (tenant) ID
-AZURE_TENANT_ID=common
-
-# Redirect URI (must match exactly with Azure AD app registration)
-AZURE_REDIRECT_URI=http://localhost:8080/auth/callback
-
-# ===========================================
-# XAMPP/phpMyAdmin DATABASE SETUP GUIDE
-# ===========================================
-
-# STEP 1: START XAMPP SERVICES
-# ===========================================
-# Start XAMPP Control Panel and start:
-# ✅ Apache (for phpMyAdmin)
-# ✅ MySQL (for database)
-
-# STEP 2: ACCESS phpMyAdmin
-# ===========================================
-# Open your browser and go to:
-# http://localhost/phpmyadmin
-
-# STEP 3: CREATE DATABASE VIA phpMyAdmin
-# ===========================================
-# 1. Click "Databases" tab
-# 2. Enter database name: thesis_management
-# 3. Select collation: utf8mb4_unicode_ci
-# 4. Click "Create"
-
-# STEP 4: CREATE DATABASE USER (OPTIONAL)
-# ===========================================
-# If you want a dedicated user (recommended for production):
-# 1. Click "User accounts" tab
-# 2. Click "Add user account"
-# 3. Fill in:
-#    - User name: thesis_user
-#    - Host name: localhost
-#    - Password: your_secure_password
-# 4. In "Database for user account" section:
-#    - Check "Grant all privileges on database thesis_management"
-# 5. Click "Go"
-# ===========================================
-# DATABASE CONFIGURATION (MySQL)
-# ===========================================
-DB_HOST=localhost
-DB_PORT=3307
-DB_NAME=thesis_management
-DB_USER=root
-DB_PASSWORD=
-
-# Database connection pool settings (optional)
-DB_MAX_OPEN_CONNS=25
-DB_MAX_IDLE_CONNS=5
-DB_CONN_MAX_LIFETIME=300
-DB_CONN_MAX_IDLE_TIME=60
-
-# ===========================================
-# SERVER CONFIGURATION
-# ===========================================
+DATABASE_URL=postgres://postgres:root@localhost:5432/minigame?sslmode=disable
 PORT=8080
-ENV=development
-BASE_URL=http://localhost:8080
-
-# Application version (optional)
-APP_VERSION=1.0.0
-
-# ===========================================
-# SESSION CONFIGURATION
-# ===========================================
-# Change this to a random 32+ character string in production!
-SESSION_SECRET=
-
-# ===========================================
-# INTERNATIONALIZATION
-# ===========================================
-# Supported languages (comma-separated)
-SUPPORTED_LANGUAGES=lt,en
-DEFAULT_LANGUAGE=lt
-
-# ===========================================
-# SECURITY & CORS
-# ===========================================
-# Set to true only if you need CORS (separate frontend apps)
-ENABLE_CORS=false
-
-# For API-only applications
-API_ONLY=false
-
-# Allowed origins for CORS (comma-separated, only if CORS enabled)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
-
-# ===========================================
-# LOGGING
-# ===========================================
-LOG_LEVEL=info
-
-# ===========================================
-# MAINTENANCE & OPERATIONAL
-# ===========================================
-# Set to true to enable maintenance mode
-MAINTENANCE_MODE=false
-
-# ===========================================
-# PRODUCTION SETTINGS
-# ===========================================
-# For production environment, change these:
-
-# ENV=production
-# BASE_URL=https://yourdomain.com
-# AZURE_REDIRECT_URI=https://yourdomain.com/auth/callback
-# SESSION_SECRET=generate-a-very-long-random-string-for-production
-# ENABLE_CORS=false
-# MAINTENANCE_MODE=false
-
-# Production database settings:
-# DB_HOST=your-production-db-host
-# DB_USER=your-production-db-user
-# DB_PASSWORD=your-secure-production-password
-# DB_NAME=thesis_management_prod
+LOG_LEVEL=debug
+BATTLE_NET_CLIENT_ID=ee69f44ad0ba4e61967a260098cc77d8
+BATTLE_NET_SECRET=
